eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-service
spec:
  type: ClusterIP
  selector:
    app: simple-bank
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
